public/less/style.less
#plugin-forms {
    #plugin-forms-forms-panel {
        #plugin-forms-forms-list {
            .plugin-forms-form-panel {
                border: @brand-primary 1px solid;

                .plugin-forms-input-label, .plugin-forms-form-title, .plugin-forms-form-id {
					.pointer;

                    border-bottom: dashed #666 1px;
                }

                .plugin-forms-form-panel-heading {
                    text-transform: none;
                    line-height: 34px;
                    padding-right: 7px;
					padding-left: 7px;
                    background-color: lighten(@brand-info, 35%);

                    .plugin-forms-btn-delete-form, .plugin-forms-btn-clone-form, .plugin-forms-btn-edit-form {
                        margin-left: 7px;
                    }

					.plugin-forms-btn-toggle-form {
						margin-right: 9px;
					}
                }

                .plugin-forms-input-list {
                    padding: 3px;
                    padding-bottom: 0;
                    border-top: @brand-success 1px solid;

                    .plugin-forms-input-panel {
                        padding: 16px;
                        padding-right: 6px;
                        border: #efefef 1px solid;
                        box-shadow: none;
                        background-color: none;
                        overflow: hidden;
                        margin: 0;
                        margin-bottom: 3px;

						input, textarea, select, radio, checkbox {
							.form-control;

							&[type='radio'], &[type='checkbox'] {
								width: unset;
								height: 1em;
							}
						}

                        .plugin-forms-btn-edit-input, .plugin-forms-btn-clone-input, .plugin-forms-btn-delete-input {
                            .pointer;

                            padding: 3px 4px;
                            margin-top: -10px;
                            margin-left: 6px;
                            line-height: unset;
                            border-radius: 24px;
                        }

                        .plugin-forms-option-controls {
                            position: absolute;
                            left: 250px;

                            .btn-sm {
                                line-height: 0.7;
                                padding: 2px 4px;
                                margin-top: -3px;
                            }
                        }

                        input {
                            &[type='text'], &[type='time'], &[type='email'], &[type='date'] {
                                width: 100%;
                                margin-right: 6px;
                            }
                        }

                        textarea {
							height: 105px;
                            width: 100%;
                        }

                        .form-group {
							select {
                                width: 300px;
								height: auto;
                            }
                        }

						.popover {
                            textarea {
                                resize: none;
                                height: 105px;
                            }
							select {
								width: 145px;
							}
                        }
                    }

                    .plugin-forms-input-panel.ui-sortable-helper {
                        box-shadow: 0px 2px 4px 0px rgba(165, 165, 165, 0.75);
                        border: @brand-primary 1px solid;
                    }

                    .ui-state-highlight {
                        height: 51px;
                        line-height: 51px;
                        border: 1px blue dotted;
                        margin: 0;
                        margin-bottom: 3px;
                    }

                    .btn {
                        border-style: outset;
                    }
                }

                .popover {
                    width: auto!important;
                    max-width: none;
                    padding: 0;

                    .popover-content {
                        padding: 6px;
                        margin-bottom: 0;

                        input {
                            &[type='text'] {
                                width: auto;
                                margin-right: 0;
                            }
                        }
                        input, button {
                            display: inline;
                        }
                        .fa-times-circle:hover {
                            color: #666;
                        }
                        .btn-sm {
                            margin-left: 2px;
                        }
                        .fa-times-circle {
                            margin-left: -23px;
                            margin-right: 7px;
                        }
                        
                        .plugin-forms-value-label-pairs {
                            margin-top: 3px;
                            width: 350px;

                            .plugin-forms-option-value {
                                width: 85px;
                            }
                            .plugin-forms-option-label {
                                width: 160px;
                            }
                        }

                        p {
                            margin: 0px 0px 3px;

                            label {
                                margin-bottom: 0;
                            }
                        }
                    }
                }
            }

            >li.ui-state-highlight {
                height: 51px;
                line-height: 51px;
                border:1px blue dotted;
                margin-bottom: 20px;
            }
        }
    }

    #plugin-forms-modal-input {
        .modal-dialog {
            width: 720px;

            .modal-content {
                .modal-body {
                    div {
                        p {
                            button {
                                .text-left;
                                max-width: 150px;
                                width: 150px;
                                margin-left: 2px;
                                margin-right: 2px;
                            }
                        }
                    }
                }
            }
        }
    }

    ul {
        list-style-type: none;
    }

    .ui-sortable {
        padding-top: 10px;
        padding-left: 0;
        min-height: 55px;
    }
}

.plugin-forms-inputs-panel {
    padding: 0;

    .panel-body {
        padding-left: 8px;
        padding-right: 8px;
        padding-bottom: 3px;

        .container-fluid, .container {
            padding: 0;

            .col-lg-6 {
                padding-top: 0;
                padding-bottom: 0;
                padding-left: 7px;
                padding-right: 7px;
            }
        }
    }
    .btn {
        .text-left;
        width: 100%;
        margin-bottom: 15px;
        box-shadow: 0px 4px 2px 0px rgba(120, 120, 120, 0.75);
    }
}

.plugin-forms-view-form {
    label {
        display: block;
    }
}

